# aemeath-claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  game_guard.py
.backup-202605282215/: app.js  bubble.js  main.rs
.claude/: settings.json
docs/: features.md  installation.md  troubleshooting.md
src/: app.js  bubble.js  index.html  pet.css  sprite-animator.js  validation.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http.rs  main.rs  mcp.rs  state.rs  tray.rs
